@@ -1,4 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST 114856-wacomtablet-2.0.2.tar.xz 620288 SHA256 1c0ac8d26be62954ca4ed67ab84337e95686e14c722822e85baca8797b71658e SHA512 5d4ead2dfc951dc3370c1ec49f713df780632dcd47c7c64e1d9788125d5ebf9fe000f5ac2199974a554fa851bea61374175b77dffa92ded08e45456fd3886688 WHIRLPOOL c85bea48d6625b0c9b06648b5f75fdf32eb50d9d73430fc9a8d81dcc2f8bfed477f8ab471f10f91536ac861a2be9fa6d09b74f0837ccf706d5381e0bf5570ac4
+DIST 114856-wacomtablet-2.1.0.tar.xz 657868 SHA256 1c4d0e9bf593b9ac99f0c2f1efae81b665cb07f5778486273ca1742f76b9c19e SHA512 fe8060120d63209bbe2adcb1c3f746086326f893ef1eaa879e0d0f843e9ba27fbbd3df5f9bf008dfc6e2dac0f1347ecc0b2bb46931646c82aaec9bfc6bc62a96 WHIRLPOOL f705be2dfe64a410f83e9acd1ec9b4f4cb58e24fbea2c3bbeadcae17dfb9bf58ce579b8040b002c2d4eb42b89e65a52f54c3c6a3fa77e8b29897a024bf7ade1b
 EBUILD wacomtablet-2.0.2.ebuild 912 SHA256 b59ebee76b3361e19fb7701ae4fb7577dd5395ef6b2577b69fa1bf01be81851a SHA512 11513006077a052f3d7b66e45948bbd4f26d19af146d9c9150f22efbd65d7951353ea87c335fba32b00dbe10a014f1d19a948b6d0d59369cec749a36da95cc07 WHIRLPOOL 278ec9e19511b37e3d724b13aafcd6d58bfccc9f90404614a47ae5d4a93af0e863f5fdebb16ce8a1a4364ffa194e853f629b207c8d904648e880e071071786bc
-MISC ChangeLog 4751 SHA256 9a5798ad7ebac9000cdedc0e016a0c79379c9b3128700fe70791a02845673f3a SHA512 d4baea7d4030822413ff2dfa1a27326302ed46a04f2b7fd5f5a652277e64bd2e854f0d049307c77ff42db2e1690ae849cbb90dcd47b7794e8962eaf20c952116 WHIRLPOOL b3949bbf658e775d0d0727d30b2f8d52b2bec5ef5eebb1b184ea71c7bbf4b10dd829ce49ad9121e6a2886452f23878c881f0d866f381f656711f5a5606b3cd09
+EBUILD wacomtablet-2.1.0.ebuild 921 SHA256 1b797c3735d6f8f7a58bafa9619b6519d6743961bffe721c7e11a31a7a56c552 SHA512 4d9fbf6d2a41b7209ee1caee4c6f645681314f8cbe236f67d001f9ccd3453968e20df9c19c2321135211c3c56f6cf019a0a700eae35f886d3efbfeb5c60744b7 WHIRLPOOL 2ef488a736ad700757dd5d9e4d452c008b39f326d0b34279334b411ead4200de94062f6f486fa0bb8d47db3021ad254c726d6a9730c34f6679ad0ed9c21a4ee2
+MISC ChangeLog 4892 SHA256 bfbd5a84cff4ba3d981dc7de8436c8465b4351926000448e6e1c9dbad93bed80 SHA512 89021dbe7558de79d0aec016b8c4dd2435ff460f3985fb44219f2d31902ccc04a96c96f5bea45275f0468fca69e04586800a28825128671ea4ca4f4953004c79 WHIRLPOOL 852b99745b37295c1c98b36cacf704dda1635bdda8bac8e7d422a9cedb5040d731fb18cb8537bafd5e9b9e51a046c5bac03c6b69dcfe30278979ce68c201415b
 MISC metadata.xml 157 SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892 SHA512 657d6b0a31ceb7ac10bedfd5cbd634d4ff47938bd2f321203f0233e53686f7e0fd460e81f82793804895c7e97cfa472c1ca44b93314574262ee8cc5745a3efd0 WHIRLPOOL 785331909f1834cdd5d797ad484ea0e35c3e44c79a8a7517a6fb5de926acd181abd57910c8d960fb2e11ea38ddea336bca309af16fcc2df68fe4b602bca120b3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJiBAEBCABMBQJU9uTrRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7L1NEACVWQRoY1PL4aCm708bQCpeRIE7vpZ6OTMR4xPMu4HgrIVzaFTeY5KKlQmG
+ZV6x4w9hsr8FIP7HAiNdsFcpRa1j5QM2rgTmmujz2RFotMvkB/KTYOoGsbKeO9es
+EWa0XLNKTasWmU55Jt7MHmnSF024539+0xaI4NJQg40Wm3OVTaqh9qqfNKYJuMps
+on4RQeNtW2DTUxNDDLwCZVF+NEMUYwkRJ+k29QpGmLT438JBnuIrBl67AlG3zlK4
+IgOZkrduEjyxH7aGO0/RWE5by/JqYwX3CugNs+51BMr5fkihdeioHPY+YQNi8wZ3
+lMykgsH+6spAhVAmYrxWMm2xrBC/ltu/Hp+uTxPRPe4/TsVzf5juC54jwrm/9KAe
+pL6L8yUWoGXzPnbMbkVTQVHwFrtkkTfVb43uhfZrWF7wqRn2anGO8u3ZG4ApuRBc
+Mf3aKJUkP55fdKjd5jPzNdeB1+EEUt03m/BQmy9UsbbK1ht8+BzxI00zwLCyUaAh
+ancafPsI1BDCP0M09WXFggt0KOuZqOONRgE0lwZKCxUotrrVNm2WPHPcmXd6Vbyh
+NwGKQRuyAeugZ7YfjSYg+M+/KYE5ZbfduKYNACATmrhHcfixJo7RkPHuEf7KlidZ
++cDv1EwrTF3gpRSUFSxxJqF9juSfpLLcMh5QcqD/40BoMj0SKw==
+=47Jg
+-----END PGP SIGNATURE-----
