@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install prepare unpack
-DEPEND=>=app-mobilephone/anyremote-6.0[bluetooth=] dev-python/pygtk bluetooth? ( dev-python/pybluez )
-DESCRIPTION=Gnome frontend to Anyremote
-EAPI=5
-HOMEPAGE=http://anyremote.sourceforge.net/
-IUSE=bluetooth
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2
-RDEPEND=>=app-mobilephone/anyremote-6.0[bluetooth=] dev-python/pygtk bluetooth? ( dev-python/pybluez )
-SLOT=0
-SRC_URI=mirror://sourceforge/anyremote/ganyremote-6.1.tar.gz
-_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=943b1698cb4e9e9371367fcd9a387e28
