@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test unpack
+DEPEND=>=x11-drivers/xf86-input-wacom-0.20.0 x11-libs/libX11 x11-libs/libXi x11-libs/libXrandr sys-devel/gettext x11-proto/xproto >=sys-apps/sed-4 test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-util/automoc virtual/pkgconfig !aqua? ( >=x11-libs/libXtst-1.1.0 x11-proto/xf86vidmodeproto ) handbook? ( app-text/docbook-xml-dtd:4.2 app-text/docbook-xsl-stylesheets ) dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.4:4[aqua=]
+DESCRIPTION=KControl module for Wacom tablets
+EAPI=5
+HOMEPAGE=http://kde-apps.org/content/show.php?action=content&content=114856
+IUSE=debug linguas_ar linguas_bg linguas_bs linguas_ca linguas_ca@valencia linguas_cs linguas_da linguas_de linguas_el linguas_en_GB linguas_eo linguas_es linguas_et linguas_fi linguas_fr linguas_ga linguas_gl linguas_hu linguas_ja linguas_kk linguas_km linguas_ko linguas_lt linguas_mai linguas_mr linguas_nb linguas_nds linguas_nl linguas_pa linguas_pl linguas_pt linguas_pt_BR linguas_ro linguas_ru linguas_sk linguas_sl linguas_sv linguas_tr linguas_ug linguas_uk linguas_zh_CN linguas_zh_TW test +handbook aqua
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=>=x11-drivers/xf86-input-wacom-0.20.0 x11-libs/libX11 x11-libs/libXi x11-libs/libXrandr || ( kde-apps/oxygen-icons >=kde-base/oxygen-icons-4.4:4[aqua=] ) linguas_ar? ( || ( kde-apps/kde-l10n[linguas_ar(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ar(+)] ) ) linguas_bg? ( || ( kde-apps/kde-l10n[linguas_bg(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_bg(+)] ) ) linguas_bs? ( || ( kde-apps/kde-l10n[linguas_bs(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_bs(+)] ) ) linguas_ca? ( || ( kde-apps/kde-l10n[linguas_ca(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ca(+)] ) ) linguas_ca@valencia? ( || ( kde-apps/kde-l10n[linguas_ca@valencia(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ca@valencia(+)] ) ) linguas_cs? ( || ( kde-apps/kde-l10n[linguas_cs(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_cs(+)] ) ) linguas_da? ( || ( kde-apps/kde-l10n[linguas_da(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_da(+)] ) ) linguas_de? ( || ( kde-apps/kde-l10n[linguas_de(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_de(+)] ) ) linguas_el? ( || ( kde-apps/kde-l10n[linguas_el(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_el(+)] ) ) linguas_en_GB? ( || ( kde-apps/kde-l10n[linguas_en_GB(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_en_GB(+)] ) ) linguas_eo? ( || ( kde-apps/kde-l10n[linguas_eo(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_eo(+)] ) ) linguas_es? ( || ( kde-apps/kde-l10n[linguas_es(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_es(+)] ) ) linguas_et? ( || ( kde-apps/kde-l10n[linguas_et(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_et(+)] ) ) linguas_fi? ( || ( kde-apps/kde-l10n[linguas_fi(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_fi(+)] ) ) linguas_fr? ( || ( kde-apps/kde-l10n[linguas_fr(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_fr(+)] ) ) linguas_ga? ( || ( kde-apps/kde-l10n[linguas_ga(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ga(+)] ) ) linguas_gl? ( || ( kde-apps/kde-l10n[linguas_gl(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_gl(+)] ) ) linguas_hu? ( || ( kde-apps/kde-l10n[linguas_hu(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_hu(+)] ) ) linguas_ja? ( || ( kde-apps/kde-l10n[linguas_ja(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ja(+)] ) ) linguas_kk? ( || ( kde-apps/kde-l10n[linguas_kk(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_kk(+)] ) ) linguas_km? ( || ( kde-apps/kde-l10n[linguas_km(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_km(+)] ) ) linguas_ko? ( || ( kde-apps/kde-l10n[linguas_ko(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ko(+)] ) ) linguas_lt? ( || ( kde-apps/kde-l10n[linguas_lt(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_lt(+)] ) ) linguas_mai? ( || ( kde-apps/kde-l10n[linguas_mai(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_mai(+)] ) ) linguas_mr? ( || ( kde-apps/kde-l10n[linguas_mr(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_mr(+)] ) ) linguas_nb? ( || ( kde-apps/kde-l10n[linguas_nb(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_nb(+)] ) ) linguas_nds? ( || ( kde-apps/kde-l10n[linguas_nds(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_nds(+)] ) ) linguas_nl? ( || ( kde-apps/kde-l10n[linguas_nl(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_nl(+)] ) ) linguas_pa? ( || ( kde-apps/kde-l10n[linguas_pa(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_pa(+)] ) ) linguas_pl? ( || ( kde-apps/kde-l10n[linguas_pl(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_pl(+)] ) ) linguas_pt? ( || ( kde-apps/kde-l10n[linguas_pt(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_pt(+)] ) ) linguas_pt_BR? ( || ( kde-apps/kde-l10n[linguas_pt_BR(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_pt_BR(+)] ) ) linguas_ro? ( || ( kde-apps/kde-l10n[linguas_ro(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ro(+)] ) ) linguas_ru? ( || ( kde-apps/kde-l10n[linguas_ru(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ru(+)] ) ) linguas_sk? ( || ( kde-apps/kde-l10n[linguas_sk(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_sk(+)] ) ) linguas_sl? ( || ( kde-apps/kde-l10n[linguas_sl(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_sl(+)] ) ) linguas_sv? ( || ( kde-apps/kde-l10n[linguas_sv(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_sv(+)] ) ) linguas_tr? ( || ( kde-apps/kde-l10n[linguas_tr(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_tr(+)] ) ) linguas_ug? ( || ( kde-apps/kde-l10n[linguas_ug(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ug(+)] ) ) linguas_uk? ( || ( kde-apps/kde-l10n[linguas_uk(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_uk(+)] ) ) linguas_zh_CN? ( || ( kde-apps/kde-l10n[linguas_zh_CN(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_zh_CN(+)] ) ) linguas_zh_TW? ( || ( kde-apps/kde-l10n[linguas_zh_TW(+)] >=kde-base/kde-l10n-4.4:4[aqua=,linguas_zh_TW(+)] ) ) handbook? ( >=kde-base/kdelibs-4.4:4[aqua=,handbook] ) dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.4:4[aqua=]
+SLOT=4
+SRC_URI=http://www.kde-apps.org/CONTENT/content-files/114856-wacomtablet-2.1.0.tar.xz
+_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	998e5931fb95b10a6a11ec796ada2759	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	c263990f1b677b0f0be0a3299f179762	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	kde4-base	f557a43bd2ddfa32a6d34915b364998a	kde4-functions	0fefdf727b8cb916a1b974021316f911	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
+_md5_=054358ff45136fbbb774880ab198afe3
