@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/wacomtablet
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/wacomtablet/ChangeLog,v 1.24 2014/11/03 10:21:55 mrueg Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/wacomtablet/ChangeLog,v 1.25 2015/03/04 10:56:42 kensington Exp $
+
+*wacomtablet-2.1.0 (04 Mar 2015)
+
+  04 Mar 2015; Michael Palimaka <kensington@gentoo.org>
+  +wacomtablet-2.1.0.ebuild:
+  Version bump.
 
   03 Nov 2014; Manuel Rüger <mrueg@gentoo.org> -wacomtablet-2.0.1.ebuild,
   -wacomtablet-2.0.ebuild:
