@@ -1,6 +1,12 @@
 # ChangeLog for app-mobilephone/ganyremote
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/ganyremote/ChangeLog,v 1.28 2015/03/04 10:27:46 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/ganyremote/ChangeLog,v 1.29 2015/03/04 10:43:32 kensington Exp $
+
+*ganyremote-6.3.3 (04 Mar 2015)
+
+  04 Mar 2015; Michael Palimaka <kensington@gentoo.org>
+  +ganyremote-6.3.3.ebuild, -ganyremote-6.1.ebuild:
+  Version bump. Remove old.
 
   04 Mar 2015; Michael Palimaka <kensington@gentoo.org> metadata.xml:
   Add upstream metadata.
